--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@
     font-size: 62.5%;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     font-size: 1.6rem;
     font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    height: 100vh;
 }
 
 .header {
@@ -23,29 +28,35 @@ body {
     width: 100%;
     padding: 1rem 5rem;
     justify-content: space-between;
+    align-items: center;
     gap: 1rem;
-    
+    color: #F9FAF8;
+
+    /* TODO add TailwindCSS class so that navbar content doesn't
+    stretch above 1000px */
 
 }
 
-.nav_links {
-    /*  */
-}
-
-.nav_links:last-of-type {
-    /* margin-right: 10rem; */
+a {
+    height: 100%;
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
 }
 
 .logo {
-   margin-right: auto;
+    padding: 0;
+    /* margin-right: auto; */
 }
 
 #logo_text {
     display: inline;
+    margin-right: auto;
 }
 
 #glutaLogo {
-    max-height: 100%;
+    width: auto;
+    height: 100%;
     max-width: 100%;
     align-self: flex-start;
     /* bold, align self, img size */
