fix: overrode :hover and :visited browser style
- Reduced letter-spacing in logo-text

--- a/style.css
+++ b/style.css
@@ -37,21 +37,30 @@ body {
 
 }
 
-a {
+.header a {
     height: 100%;
     padding: 1rem 0;
     display: flex;
     align-items: center;
+    font-weight: normal;
+    text-decoration: none;
+
+}
+
+.header a:hover, a:visited {
+    color: inherit;
+    text-decoration: inherit;
 }
 
 .logo {
     padding: 0;
-    /* margin-right: auto; */
 }
 
 #logo_text {
     display: inline;
     margin-right: auto;
+    font-size: 4.8rem;
+    letter-spacing: -0.5rem;
 }
 
 #glutaLogo {
