--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     align-items: center;
     gap: 1rem;
     color: #F9FAF8;
+    font-size: 1.8rem;
 
     /* TODO add TailwindCSS class so that navbar content doesn't
     stretch above 1000px */
