fix: .about height to min-height
- Erased div wrapping about_sign_up

--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@ body {
     height: 100vh;
 }
 
+/* HEADER STYLES */
+
 .header {
     display: flex;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
@@ -70,4 +72,54 @@ body {
     max-width: 100%;
     align-self: flex-start;
     /* bold, align self, img size */
+}
+
+/* ABOUT SECTION STYLES */
+
+section {
+    max-width: 1000px;
+}
+
+.about {
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+    width: 100%;
+    min-height: calc(7.5rem * 6);
+    /* position: ; */
+    box-sizing: border-box;
+    padding: 7rem 4.5rem;
+    background-color: #222d3d;
+}
+
+.about_text {
+    display: flex;
+    flex-direction: column;
+}
+
+.about_text h1 {
+    font-size: 4.8rem;
+    font-weight: 1000;
+    color: #F9FAF8;
+}
+
+.about_text p {
+    font-size: 1.8rem;
+    font-weight: normal;
+    color: #E5E7EB;
+}
+
+#about_sign_up {
+    background-color: #3882F6;
+    border-radius: 1rem;
+    width: fit-content;
+    height: fit-content;
+    padding: 0.7rem 1.6rem;
+}
+
+#main_section_glutas {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
