--- a/style.css
+++ b/style.css
@@ -153,4 +153,24 @@ section {
     display: flex;
     flex-direction: row;
     gap: 2rem;
+
+}
+
+.history_images_pairs {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    align-items: center;
+    text-align: center;
+    max-width: min-content;
+}
+
+.history_images img {
+    width: 10rem;
+    height: 10rem;
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 5rem;
+    border: 0.5rem solid #3882F6;
+    border-radius: 1rem;
 }
