--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ section {
     min-height: calc(7.5rem * 12);
     /* position: ; */
     box-sizing: border-box;
-    padding: 7rem 4.5rem;
+    padding: 7rem 0 0 0;
 }
 
 .history {
@@ -150,34 +150,17 @@ section {
     padding: 0 3rem;
 }
 
+.history h2 {
+    font-size: 3.6rem;
+    color: #1F2937;
+}
+
 .history_images {
     display: flex;
     flex-direction: row;
     gap: 6rem;
     padding: 0 6rem;
 }
-
-/* .history_images_pairs {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    text-align: center;
-    max-width: min-content;
-    width: 10rem;
-    height: 10rem;
-}
-
-.history_images img {
-    width: 10rem;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-    min-width: 5rem;
-    border: 0.5rem solid #3882F6;
-    border-radius: 1rem;
-    align-self: flex-start;
-} */
 
 .history_images_pairs {
     display: flex;
@@ -201,4 +184,25 @@ section {
 
 .history_images p {
     margin: 0;
+}
+
+    /* QUOTE STYLES */
+
+.quote {
+    background-color: #E5E7EB;
+    font-size: 3.6rem;
+    font-style: italic;
+    color: #1F2937;
+    padding: 7rem 5rem;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.quote_author {
+    text-align: right;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 2.4rem;
+    color: #1F2937;
 }
