--- a/style.css
+++ b/style.css
@@ -78,9 +78,10 @@ body {
 
 /* ABOUT SECTION STYLES */
 
+    /* TODO add TailwindCSS or media query */
+
 section {
     max-width: 1000px;
-    /* TODO add TailwindCSS or media query */
 }
 
 .about {
@@ -205,4 +206,77 @@ section {
     font-style: normal;
     font-size: 2.4rem;
     color: #1F2937;
+}
+
+/* SIGN UP STYLES */
+
+.sign_up {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 3rem;
+    box-sizing: border-box;
+    padding: 7rem 4.5rem;
+    width: 100%;
+    justify-content: space-evenly;
+    color: #F9FAF8;
+}
+
+.sign_up_text {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    max-width: 60%;
+}
+
+.sign_up_text h3 {
+    font-size: 2.8rem;
+    font-weight: bold;
+    margin: 0;
+}
+
+.sign_up_text p {
+    font-size: 1.8rem;
+    font-weight: normal;
+    margin: 0;
+}
+
+.sign_up_blue_box {
+    background-color: #3882F6;
+    border-radius: 1rem;
+    width: 100%;
+    height: 100%;
+    padding: 3rem 5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+}
+
+#sign_up_button {
+    background-color: inherit;
+    border-radius: 1rem;
+    border: 0.3rem solid #F9FAF8;
+    width: fit-content;
+    height: fit-content;
+    padding: 0.7rem 3rem;
+    color: inherit;
+    font-size: 1.6rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+/* FOOTER STYLES */
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.6rem;
+    color: #E5E7EB;
+    background-color: #222d3d;
+    width: 100%;
+    height: 10rem;
+    letter-spacing: 0.123rem;
 }
