fix: added color to .header anchors

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     padding: 1rem 0;
     display: flex;
     align-items: center;
+    color: #F9FAF8;
     font-weight: normal;
     text-decoration: none;
 
