--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
 }
 
 html {
-    height: 100%;
+    height: min-content;
 }
 
 body {
     font-size: 1.6rem;
     font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
-    height: 100vh;
+    height: 100%;
 }
 
 
