--- a/style.css
+++ b/style.css
@@ -1,290 +1,356 @@
-/* :root font-size = 10px, body font-size = 16px */
-/* Finish HTML, then CSS, then responsiveness */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
 :root {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 html {
-    height: min-content;
+  width: 100%;
+  height: 100vh;
 }
 
 body {
-    font-size: 1.6rem;
-    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    height: 100%;
+  font-size: 1.6rem;
+  font-family:
+    Roboto,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  width: 100%;
+  height: 100%;
 }
-
 
 /* HEADER STYLES */
 
-.header {
-    display: flex;
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: #1F2937;
-    box-sizing: border-box;
-    height: 7.5rem;
-    width: 100%;
-    padding: 1rem 5rem;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-    color: #F9FAF8;
-    font-size: 1.8rem;
-
-    /* TODO add TailwindCSS class so that navbar content doesn't
-    stretch above 1000px */
-
+#header_container {
+  width: 100%;
+  background-color: #1f2937;
+  display: flex;
+  justify-content: center;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.5);
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
-.header a {
-    height: 100%;
-    padding: 1rem 0;
-    display: flex;
-    align-items: center;
-    color: #F9FAF8;
-    font-weight: normal;
-    text-decoration: none;
-
+#header {
+  display: flex;
+  height: 7.5rem;
+  width: clamp(50rem, 80%, 120rem);
+  padding: 1rem 5rem;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  color: #f9faf8;
+  font-size: 1.8rem;
 }
 
-.header a:hover, a:visited {
-    color: inherit;
-    text-decoration: inherit;
+#header > a {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: #f9faf8;
+  font-weight: normal;
+  text-decoration: none;
 }
 
-.logo {
-    padding: 0;
+.header_dropdown_options {
+  display: none;
+  position: absolute;
+  padding: 1rem;
+  top: 5.5rem;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  background-color: #60718c39;
+  color: #e5e7eb;
+  border-radius: 0.5rem;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+/* 
+TODO: You should hard-code the menu items into your HTML but hide/reveal them using JavaScript. You can do this either by adding a class (visible or something) or by manually setting the style in JS.
+
+Make sure the JavaScript code is reusable! You should be able to create multiple drop-downs on a page using HTML and reuse the JavaScript logic to hide/reveal them.
+
+If you bundle your code into a module you can publish it to npm and then install and use it anytime you like! Nothing like publishing your own modules to make you feel like a pro 😎.
+ */
+
+#header a:hover,
+a:visited {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+#logo_link {
+  padding: 0;
 }
 
 #logo_text {
-    display: inline;
-    margin-right: auto;
-    font-size: 4.8rem;
-    letter-spacing: -0.5rem;
+  display: inline;
+  margin-right: auto;
+  font-size: 4.8rem;
+  letter-spacing: -0.5rem;
+  & a {
+    text-decoration: none;
+    color: #f9faf8;
+  }
 }
 
 #glutaLogo {
-    width: auto;
-    height: 100%;
-    max-width: 100%;
-    min-width: 4rem;
-    align-self: flex-start;
-    /* bold, align self, img size */
+  width: auto;
+  height: 100%;
+
+  align-self: flex-start;
 }
 
 /* ABOUT SECTION STYLES */
 
-    /* TODO add TailwindCSS or media query */
-
 section {
-    max-width: 1000px;
+  width: 100%;
 }
 
-.about {
-    display: flex;
-    flex-direction: row;
-    gap: 3rem;
-    width: 100%;
-    min-height: calc(7.5rem * 6);
-    /* position: ; */
-    box-sizing: border-box;
-    padding: 7rem 4.5rem;
-    background-color: #222d3d;
+#about {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #222d3d;
+  padding: 5rem;
+}
+
+#about_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  width: clamp(50rem, 80%, 120rem);
+  height: 100%;
 }
 
 .about_text {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  width: clamp(30rem, 50%, 100rem);
 }
 
 .about_text h1 {
-    font-size: 4.8rem;
-    font-weight: 1000;
-    color: #F9FAF8;
+  font-size: 4.8rem;
+  font-weight: 1000;
+  color: #f9faf8;
 }
 
 .about_text p {
-    font-size: 1.8rem;
-    font-weight: normal;
-    color: #E5E7EB;
+  font-size: 1.8rem;
+  color: #e5e7eb;
 }
 
 #about_sign_up {
-    background-color: #3882F6;
-    color: #F9FAF8;
-    text-decoration: none;
-    border-radius: 1rem;
-    width: fit-content;
-    height: fit-content;
-    padding: 0.7rem 1.6rem;
+  background-color: #3882f6;
+  color: #f9faf8;
+  text-decoration: none;
+  border-radius: 1rem;
+  width: fit-content;
+  height: fit-content;
+  padding: 0.7rem 1.6rem;
 }
 
-#about_sign_up a:hover, a:visited {
-    color: inherit;
-    text-decoration: inherit;
+#about_sign_up a:hover,
+a:visited {
+  color: inherit;
+  text-decoration: inherit;
 }
+
+.about_image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: clamp(30rem, 50%, 100rem);
+}
+
+/* TODO: Add an image slider
+  This one is a little more involved than the last two, so think about how you would set up the different elements within the site.
+
+  Set up a very wide div which will contain the individual “slides” of each image. By appropriately positioning that div inside a container div (which acts like a picture frame), you can choose which slide is visible at any given time.
+
+  Once you have the slider positioned properly, build functions for “next” and “previous” which will advance to the next or previous slide accordingly. Make the transitions smooth using effects.
+
+  Set up arrow buttons which activate those functions and play with cycling through the images. 
+
+  Add in some navigation dots at the bottom of the slides. Make a horizontal series of empty circles with CSS immediately below the slideshow. Each circle represents a slide, so whenever a new slide is activated, its corresponding circle gets filled in so you can tell where in the show you are. Make each circle link to that particular slide, so you can click on the circle and it will jump to that slide.
+
+  Add a timeout which advances the slides every 5 seconds. */
 
 #main_section_glutas {
-    width: 100%;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-    min-width: 24rem;
-    border-radius: 2rem;
+  width: 100%;
+  height: auto;
+  border-radius: 2rem;
 }
 
 /* MAIN CONTENT STYLES */
 
-.main_content {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-    width: 100%;
-    min-height: calc(7.5rem * 12);
-    /* position: ; */
-    box-sizing: border-box;
-    padding: 7rem 0 0 0;
+#main_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 3rem;
 }
 
-.history {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4rem;
-    padding: 0 3rem;
+#history {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+  padding: 7rem 3rem 0 3rem;
+  width: min(100%, 120rem);
 }
 
 .history h2 {
-    font-size: 3.6rem;
-    color: #1F2937;
+  font-size: 3.6rem;
+  color: #1f2937;
 }
 
 .history_images {
-    display: flex;
-    flex-direction: row;
-    gap: 6rem;
-    padding: 0 6rem;
+  display: flex;
+  flex-direction: row;
+  gap: 6rem;
+  padding: 0 6rem;
+  & p {
+    font-size: max(2.4rem, 25%);
+  }
 }
 
 .history_images_pairs {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    min-width: 100px;
-    min-height: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .history_images img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-        border: 0.5rem solid #3882F6;
-    border-radius: 1rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 0.5rem solid #3882f6;
+  border-radius: 1rem;
 }
 
-.history_images p {
-    margin: 0;
-}
+/* QUOTE STYLES */
 
-    /* QUOTE STYLES */
+#quote {
+  background-color: #e5e7eb;
+  font-size: 3.6rem;
+  font-style: italic;
+  color: #1f2937;
+  padding: 7rem 15rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-.quote {
-    background-color: #E5E7EB;
-    font-size: 3.6rem;
-    font-style: italic;
-    color: #1F2937;
-    padding: 7rem 5rem;
-    width: 100%;
-    box-sizing: border-box;
-    margin: 0;
+  & p {
+    width: min(100%, 120rem);
+  }
 }
 
 .quote_author {
-    text-align: right;
-    font-weight: bold;
-    font-style: normal;
-    font-size: 2.4rem;
-    color: #1F2937;
+  text-align: right;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 2.4rem;
+  color: #1f2937;
 }
 
 /* SIGN UP STYLES */
 
-.sign_up {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 3rem;
-    box-sizing: border-box;
-    padding: 7rem 4.5rem;
-    width: 100%;
-    justify-content: space-evenly;
-    color: #F9FAF8;
+#sign_up {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3rem;
+
+  padding: 7rem 4.5rem;
+  justify-content: space-evenly;
+  color: #f9faf8;
 }
 
 .sign_up_text {
-    display: flex;
-    flex-direction: column;
-    gap: 0.2rem;
-    max-width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  max-width: 60%;
 }
 
 .sign_up_text h3 {
-    font-size: 2.8rem;
-    font-weight: bold;
-    margin: 0;
+  font-size: 2.8rem;
+  font-weight: bold;
+  margin: 0;
 }
 
 .sign_up_text p {
-    font-size: 1.8rem;
-    font-weight: normal;
-    margin: 0;
+  font-size: 1.8rem;
+  font-weight: normal;
+  margin: 0;
 }
 
 .sign_up_blue_box {
-    background-color: #3882F6;
-    border-radius: 1rem;
-    width: 100%;
-    height: 100%;
-    padding: 3rem 5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: 3rem;
+  background-color: #3882f6;
+  border-radius: 1rem;
+  width: min(100%, 85rem);
+  height: 100%;
+  padding: 3rem 5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 3rem;
 }
 
 #sign_up_button {
-    background-color: inherit;
-    border-radius: 1rem;
-    border: 0.3rem solid #F9FAF8;
-    width: fit-content;
-    height: fit-content;
-    padding: 0.7rem 3rem;
-    color: inherit;
-    font-size: 1.6rem;
-    font-weight: bold;
-    cursor: pointer;
+  background-color: inherit;
+  border-radius: 1rem;
+  border: 0.3rem solid #f9faf8;
+  width: fit-content;
+  height: fit-content;
+  padding: 0.7rem 3rem;
+  color: inherit;
+  font-size: 1.6rem;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 /* FOOTER STYLES */
 
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.6rem;
-    color: #E5E7EB;
-    background-color: #222d3d;
-    width: 100%;
-    height: 10rem;
-    letter-spacing: 0.123rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: auto;
+  font-size: 1.6rem;
+  color: #e5e7eb;
+  background-color: #222d3d;
+  width: 100%;
+  height: 10rem;
+  letter-spacing: 0.123rem;
 }
