--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ a {
 
 html {
   width: 100%;
-  height: 100vh;
 }
 
 body {
@@ -25,15 +24,14 @@ body {
     system-ui,
     -apple-system,
     BlinkMacSystemFont,
-    "Segoe UI",
+    'Segoe UI',
     Oxygen,
     Ubuntu,
     Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
+    'Open Sans',
+    'Helvetica Neue',
     sans-serif;
   width: 100%;
-  height: 100%;
 }
 
 /* HEADER STYLES */
@@ -63,6 +61,7 @@ body {
 
 #header > a {
   height: 100%;
+  width: fit-content;
   display: flex;
   align-items: center;
   color: #f9faf8;
@@ -70,11 +69,47 @@ body {
   text-decoration: none;
 }
 
+#main_content_dropdown {
+  height: 100%;
+  width: 8rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+@keyframes dropdownimation {
+  0% {
+    scale: 0;
+  }
+
+  100% {
+    scale: 1;
+  }
+}
+
+@keyframes dropdownimationReverse {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+
+.header_dropdown_options.animate-in {
+  animation: dropdownimation 0.15s ease-out forwards;
+}
+
+.header_dropdown_options.animate-out {
+  animation: dropdownimationReverse 0.15s ease-out forwards;
+}
+
 .header_dropdown_options {
   display: none;
+  flex-direction: column;
   position: absolute;
   padding: 1rem;
-  top: 5.5rem;
+  top: 4.5rem;
   gap: 1rem;
   align-items: center;
   justify-content: center;
@@ -83,15 +118,8 @@ body {
   border-radius: 0.5rem;
   font-size: 1.8rem;
   font-weight: bold;
+  animation: dropdownimation 0.15s ease-out;
 }
-
-/* 
-TODO: You should hard-code the menu items into your HTML but hide/reveal them using JavaScript. You can do this either by adding a class (visible or something) or by manually setting the style in JS.
-
-Make sure the JavaScript code is reusable! You should be able to create multiple drop-downs on a page using HTML and reuse the JavaScript logic to hide/reveal them.
-
-If you bundle your code into a module you can publish it to npm and then install and use it anytime you like! Nothing like publishing your own modules to make you feel like a pro 😎.
- */
 
 #header a:hover,
 a:visited {
@@ -129,11 +157,11 @@ section {
 
 #about {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: #222d3d;
   padding: 5rem;
+  height: min(60rem, 25%);
 }
 
 #about_container {
@@ -178,30 +206,111 @@ a:visited {
   text-decoration: inherit;
 }
 
-.about_image {
+#about_slider_container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 3rem;
   width: clamp(30rem, 50%, 100rem);
 }
 
-/* TODO: Add an image slider
-  This one is a little more involved than the last two, so think about how you would set up the different elements within the site.
-
-  Set up a very wide div which will contain the individual “slides” of each image. By appropriately positioning that div inside a container div (which acts like a picture frame), you can choose which slide is visible at any given time.
-
-  Once you have the slider positioned properly, build functions for “next” and “previous” which will advance to the next or previous slide accordingly. Make the transitions smooth using effects.
-
-  Set up arrow buttons which activate those functions and play with cycling through the images. 
-
-  Add in some navigation dots at the bottom of the slides. Make a horizontal series of empty circles with CSS immediately below the slideshow. Each circle represents a slide, so whenever a new slide is activated, its corresponding circle gets filled in so you can tell where in the show you are. Make each circle link to that particular slide, so you can click on the circle and it will jump to that slide.
-
-  Add a timeout which advances the slides every 5 seconds. */
-
-#main_section_glutas {
+#slider_frame {
+  height: clamp(30rem, 50%, 100rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
   width: 100%;
-  height: auto;
+}
+
+#slider_container {
+  height: 95%;
+  padding: 0 50%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+  width: fit-content;
+  background-color: #505f762f;
   border-radius: 2rem;
+  box-shadow: inset 0 0 0.5rem 0.5rem #222d3d;
+  scroll-behavior: smooth;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.centered {
+  position: relative;
+  box-shadow: 1px 1px 1.5rem 0.3rem #1d1f21;
+  z-index: 3;
+  transform: scale(1.1) opacity(1);
+  transition:
+    opacity 0.7s ease,
+    scale 0.7s ease;
+}
+
+#slider_container > img:not(.centered) {
+  position: relative;
+  scale: 0.7;
+  opacity: 0.5;
+  transition:
+    opacity 0.7s ease,
+    scale 0.7s ease;
+}
+
+.main_section_glutas {
+  width: auto;
+  height: 25rem;
+  border-radius: 2rem;
+}
+
+#slider_dots_container {
+  display: flex;
+}
+
+.slider_dots {
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  border: 1px solid #e5e7eb;
+  background-color: transparent;
+  margin: 0 0.5rem;
+  cursor: pointer;
+}
+
+.selected_dot {
+  background-color: #e5e7eb;
+}
+
+#back_button {
+  margin-right: 1rem;
+  left: -3.7rem;
+}
+#forward_button {
+  margin-left: 1rem;
+  right: -3.7rem;
+}
+
+.slider_buttons {
+  background-color: #e5e7eb;
+  color: #3882f6;
+  font-weight: bold;
+  font-size: 2.1rem;
+  border: none;
+  cursor: pointer;
+  width: 3rem;
+  height: 3rem;
+  box-shadow: 1px 1px 1.5rem #000;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  transition: transform 0.3s ease;
+  &:active {
+    transform: scale(0.8);
+  }
 }
 
 /* MAIN CONTENT STYLES */
